# TeleMedicine

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  INTEGRATION_TODO.md  README.md  docker-compose.yaml  local.docker-compose.yaml  nginx.conf
backend/: .dockerignore  .env.postgres.template  .env.template  .gitignore  Dockerfile  README.md  logging_config.json  pyproject.toml
backend/scripts/: seed_demo_data.py
backend/src/: config.py  db.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  admin.py  auth.py  doctor.py  maintenance.py  qa.py  serializers.py  specializations.py
backend/src/extra/examples/: users_fl.json  users_up.json
backend/src/gunicorn/: app.py  run.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2026_04_23_2245-6d43758e4cb3_add_app_options.py  (+4 more)
backend/src/models/: __init__.py  auth.py  base.py  doctor.py  enums.py  qa.py  system.py
backend/src/repos/: __init__.py  auth.py  base.py  doctor.py  loaders.py  qa.py  specializations.py  system.py
backend/src/schemas/: admin.py  auth.py  base.py  doctor.py  qa.py  system.py
backend/src/services/: __init__.py  admin.py  auth.py  base.py  doctor.py  qa.py  specializations.py  system.py
backend/src/utils/: bootstrap.py  db_tools.py  exceptions.py  files.py  logging.py  permissions.py  security.py
backend/tests/: conftest.py  test_auth.py  test_backend_contracts.py  test_config.py  test_doctor_and_questions.py  test_hashing.py  test_integration_flows.py  test_login.py  test_maintenance.py  test_profile.py  test_register.py
(+89 files in other folders)
